syntax = "proto3";

package checkin;

option go_package = "ori/microservice";

message CheckInUserRequest {
    string user_id = 1;
    
    message Location {
        float longitude = 1;
        float latitude = 2;
    }

    Location location = 2;
    string timestamp = 3;

    message Venue {
        string name = 1;
    }
    Venue venue = 4;
    repeated string friends_with = 5;
}

message CheckInUserResponse {
    string user_id = 1;
    string venue_name = 2;
    int32 friends_count = 3;
}

message GetCheckedInVenuesRequest {
    string user_id = 1;
}

message GetCheckedInVenuesResponse {

    message Venue {
        string name = 1;
        message Location {
            float longitude = 1;
            float latitude = 2;
        }
        Location location = 2;
    }

    repeated Venue venue = 1;
}

service Checkin {
    rpc CheckInUser (CheckInUserRequest) returns (CheckInUserResponse);
    rpc GetCheckedInVenues(GetCheckedInVenuesRequest) returns (GetCheckedInVenuesResponse);
}